force-app/main/objects/Assigned_To_Assigned_Email_Mapping__mdt.object
<CustomObject>
    <description>Custom metadata for Assignee email mapping based on Assigned to and Caller Type for Referral Cases.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Email__c</fullName>
        <label>Assignee Email</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type_c__c</fullName>
        <label>Case Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_On_BU_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check On BU</label>
        <type>Checkbox</type>
    </fields>
    <label>Assigned To _ Assigned Email Mapping</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Assigned_To__c</columns>
        <columns>Assignee_Email__c</columns>
        <columns>BU__c</columns>
        <columns>Case_Type_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Assigned To _ Assigned Email Mapping</pluralLabel>
</CustomObject>